Frontend fixes for better UX